# Mouse_movement_monitoring

./: .gitignore  Pipfile  README.md  mouse_move.py  pyproject.toml
src/KMI/: __init__.py  main.py
src/KMI/apps/: mouse_app.py
src/KMI/utils/: logger_conf.py
